                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2018-10-18
 * Trends deltas now take an average over time rather than having last write be the value for daily, monthly, yearly. This means delta trends won't have perfect accuracy for a while.
 * Trends don't log if value eq undef

2018-09-30
 * Bunch of chat bug fixes.
 * Added /badge and /badge-color commands to chat.
 * Added windowing controls to chat wrapper.
 * Admins automatically handle secondary auth when they "become" a user now.

2018-09-29
 * Add S3File role, for uploading files vs images into a private bucket.

2018-09-25
 * Converted UI to use Vue 2 and Bootstrap 4.
 * Read angular2vue.txt for migration details.
 * Now requires: Template::Plugin::JSON::Escape
 * If you wish to take advantage of the new Firebase features in the UI you'll need to load:

 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>

 * Now requires Crypt::JWT and Firebase Perl modules.
 * Added public/wing.chatwrapper.js. If you want to use it, you need to expose it in etc/nginx.conf.
 * If you want to use Firebase, copy the rules from var/firebase_rules.json into your Firebase instance.
 * If you want to use Firebase, you'll need to set up the Firebase section in your wing.conf file like this:

  "firebase" : {
        "id" : "firebase-idgoeshere",
        "service_email" : "firebase-adminsdk-somecode@firebase-dbname.iam.gserviceaccount.com",
        "api_key" : "api key goes here",
        "database" : "dbname",
        "admin_key" : "-----BEGIN PRIVATE KEY-----\nkey goes here\n-----END PRIVATE KEY-----\n",